--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,44 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Alex Warren">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <title>Grades Tracker</title>
 
-    <!-- Optional JavaScript -->
+    <link href="css/gradestracker.css" rel="stylesheet">
+  </head>
+
+  <body class="text-center">
+    <form id="signin-form" class="form-signin">
+      <h1>Grades Tracker</h1>
+
+      <div id="div-signin" class="div-sign">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      </div>
+
+      <div id="div-signup"  class="div-sign">
+        <h1 class="h3 mb-3 font-weight-normal">Create account</h1>
+        <label for="inputNewEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputNewEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputNewPassword" class="sr-only">Password</label>
+        <input type="password" id="inputNewPassword" class="form-control" placeholder="Password" required>
+        <label for="confirmPassword" class="sr-only">Confirm password</label>
+        <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required>
+      </div>
+
+      <button id="button-signin" class="btn btn-lg btn-primary btn-block" type="button" onclick="showSignIn()">Sign In</button>
+      <button id="button-signup" class="btn btn-lg btn-primary btn-block" type="button" onclick="showSignUp()">Sign Up</button>
+    </form>
+
+    <script src="js/signin.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
